--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(glad "${CMAKE_CURRENT_SOURCE_DIR}/lib/glad/src/glad.c")
 target_include_directories(glad PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib/glad/include")
 
 set(SOURCES
+    src/chunk.cpp
+    src/engine.cpp
     src/main.cpp
     src/platform.cpp
     src/shader.cpp
